--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,15 @@
 ﻿repos:
   - repo: https://github.com/psf/black
     rev: 24.3.0
-    hooks: [{id: black}]
+    hooks:
+      - id: black
+
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
-    hooks: [{id: isort}]
+    hooks:
+      - id: isort
+
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
-    hooks: [{id: flake8}]
-  - repo: https://github.com/pytest-dev/pytest
-    rev: 8.2.2
-    hooks: [{id: pytest}]
+    hooks:
+      - id: flake8
