--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,6 @@ build-backend = "setuptools.build_meta"
 name = "stbz_lib"
 version = "0.0.0"
 requires-python = ">=3.12"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
