--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "stbz_lib"
 version = "0.0.0"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = ["numpy==2.3.0"]
 
 [tool.black]
 line-length = 120
