fix(ci): 處理 Unicode 字符問題

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,7 +46,7 @@ jobs:
         python -c "from stbz_lib import mouse_tap, mouse_hold, mouse_pos, mouse_move, mouse_block, mouse_unblock"
         python -c "from stbz_lib import capture, close"
         
-        Write-Host "✓ Package validation successful" -ForegroundColor Green
+        Write-Host "Package validation successful" -ForegroundColor Green
       shell: powershell
       
     - name: Run tests
